jc-dev/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: web-ingress
spec:
  tls:
  - hosts:
    - naythanc.dev
    secretName: jc-dev-tls
  rules:
  - host: naythanc.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: simple-webapp-svc
            port: 
              number: 3000
  - host: naythanc.dev
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service: 
            name: hello-world
            port: 
              number: 8080
